--- a/index.html
+++ b/index.html
@@ -23,12 +23,55 @@
           tendencias.
         </p>
         <a href="" class="header--button"
-          >Conoce Nuestros Planes <span>i</span></a
-        >
+          >Conoce Nuestros Planes <span></span
+        ></a>
       </div>
     </header>
     <main>
-      <section></section>
+      <section class="main-section">
+        <div class="main-img"></div>
+        <div class="main-text-container">
+          <h2>Visibilizamos todas las tasas de cambio.</h2>
+          <p>
+            Traemos información en tiempo real de las casas de cambio y las
+            monedas más importantes del mundo.
+          </p>
+        </div>
+        <div class="main-table-currency">
+          <h3>Monedas</h3>
+          <div class="table-container">
+            <table class="table">
+              <tr class="table-currency-firstData">
+                <td class="table-currency-name">Bitcoin</td>
+                <td class="table-currency-price">$ 1.96</td>
+              </tr>
+              <tr>
+                <td class="table-currency-name">Ethereum</td>
+                <td class="table-currency-price">$ 0.07</td>
+              </tr>
+              <tr>
+                <td class="table-currency-name">Ripple</td>
+                <td class="table-currency-price">$ 2.15</td>
+              </tr>
+              <tr>
+                <td class="table-currency-name">Stellar</td>
+                <td class="table-currency-price">$ 4.96</td>
+              </tr>
+              <tr class="table-currency-lastData">
+                <td class="table-currency-name">Bitcoin</td>
+                <td class="table-currency-price">$ 1.96</td>
+              </tr>
+            </table>
+
+            <div class="">
+              <span class="table-icon"></span>
+            </div>
+          </div>
+        </div>
+        <div class="main-table-description">
+          <p>Actualizado: <span>19 Julio 23:45</span></p>
+        </div>
+      </section>
       <section></section>
       <section></section>
       <section></section>
