--- a/index.html
+++ b/index.html
@@ -53,28 +53,132 @@
                 <td class="table-currency-name">Ripple</td>
                 <td class="table-currency-price">$ 2.15</td>
               </tr>
-              <tr>
+              <tr class="table-currency-lastData">
                 <td class="table-currency-name">Stellar</td>
                 <td class="table-currency-price">$ 4.96</td>
               </tr>
-              <tr class="table-currency-lastData">
-                <td class="table-currency-name">Bitcoin</td>
-                <td class="table-currency-price">$ 1.96</td>
-              </tr>
             </table>
-
             <div class="">
               <span class="table-icon"></span>
             </div>
           </div>
         </div>
         <div class="main-table-description">
-          <p>Actualizado: <span>19 Julio 23:45</span></p>
+          <p class="main-table-description--title">Actualizado:</p>
+          <span class="main-table-description--text">19 Julio 23:45</span>
         </div>
       </section>
-      <section></section>
-      <section></section>
-      <section></section>
+      <section class="cards-section">
+        <div class="cards-container">
+          <div class="cards-container--texts">
+            <p class="cards-title">Creamos un producto sin comparación.</p>
+            <p class="cards-subtitle">
+              Confiable y diseñado para su uso diario.
+            </p>
+          </div>
+          <div class="card">
+            <img src="./assets/icons/clock.svg" alt="" />
+            <span>Tiempo real</span>
+            <p>
+              Nuestro API toma información minuto a minuto sobre las tasas que
+              más determinan el comportamiento.
+            </p>
+          </div>
+          <div class="card">
+            <img src="./assets/icons/eye.svg" alt="" />
+            <span>No hay tasas escondidas</span>
+            <p>
+              Ni en la compra o al momento de exit, Batatbit siempre te muestra
+              el costo real de lo que estpas adquiriendo.
+            </p>
+          </div>
+          <div class="card">
+            <img src="./assets/icons/dollar-sign.svg" alt="" />
+            <span>Compara monedas</span>
+            <p>
+              No más rumores, con Babtabit sobrás el valor real de cada moneda
+              en el mercado actual.
+            </p>
+          </div>
+          <div class="card">
+            <img src="./assets/icons/check-circle.svg" alt="" />
+            <span>Información confiable</span>
+            <p>
+              Nuestras fuentes están 100% verificadas y continuamos auditando su
+              contenido mientras se actualizan.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="img-section">
+        <div class="img-container">
+          <span class="img-container--title">Conócelo hoy.</span>
+        </div>
+      </section>
+      <section class="plans-section">
+        <div class="plans-container">
+          <div class="plans-container--texts">
+            <p>Escoge el plan que mejor se ajuste a ti.</p>
+            <span
+              >Cualquier plan te da acceso completo a nuestra plataforma.</span
+            >
+          </div>
+
+          <div class="plans-cards">
+            <div class="plan-card">
+              <div class="top">
+                <p>Recomendado</p>
+              </div>
+              <div class="price-description">
+                <p>Pago Anual</p>
+              </div>
+              <div class="price">
+                <span>$</span>
+                <span class="price--number">99</span>
+              </div>
+              <p>*Ahorras $129 comparado al plan mensual.</p>
+              <div class="plan-select">
+                <p>Escoger este</p>
+                <div class="arrow-select"></div>
+              </div>
+            </div>
+            <div class="plan-card">
+              <div class="top">
+                <p>Recomendado</p>
+              </div>
+              <div class="price-description">
+                <p>Pago Anual</p>
+              </div>
+              <div class="price">
+                <span>$</span>
+                <span class="price--number">99</span>
+              </div>
+              <p>*Ahorras $129 comparado al plan mensual.</p>
+              <div class="plan-select">
+                <p>Escoger este</p>
+                <div class="arrow-select"></div>
+              </div>
+            </div>
+            <div class="plan-card">
+              <div class="top">
+                <p>Recomendado</p>
+              </div>
+              <div class="price-description">
+                <p>Pago Anual</p>
+              </div>
+              <div class="price">
+                <span>$</span>
+                <span class="price--number">99</span>
+              </div>
+              <p>*Ahorras $129 comparado al plan mensual.</p>
+              <div class="plan-select">
+                <p>Escoger este</p>
+                <div class="arrow-select"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
