mobile version done

--- a/index.html
+++ b/index.html
@@ -133,14 +133,13 @@
                 <p>Pago Anual</p>
               </div>
               <div class="price">
-                <span>$</span>
+                <span class="price-symbol">$</span>
                 <span class="price--number">99</span>
               </div>
-              <p>*Ahorras $129 comparado al plan mensual.</p>
-              <div class="plan-select">
-                <p>Escoger este</p>
-                <div class="arrow-select"></div>
+              <div class="plan-description">
+                <p>*Ahorras $129 comparado al plan mensual.</p>
               </div>
+              <a href="" class="plan--button">Escoger este <span></span></a>
             </div>
             <div class="plan-card">
               <div class="top">
@@ -150,14 +149,13 @@
                 <p>Pago Anual</p>
               </div>
               <div class="price">
-                <span>$</span>
+                <span class="price-symbol">$</span>
                 <span class="price--number">99</span>
               </div>
-              <p>*Ahorras $129 comparado al plan mensual.</p>
-              <div class="plan-select">
-                <p>Escoger este</p>
-                <div class="arrow-select"></div>
+              <div class="plan-description">
+                <p>*Ahorras $129 comparado al plan mensual.</p>
               </div>
+              <a href="" class="plan--button">Escoger este <span></span></a>
             </div>
             <div class="plan-card">
               <div class="top">
@@ -167,19 +165,23 @@
                 <p>Pago Anual</p>
               </div>
               <div class="price">
-                <span>$</span>
+                <span class="price-symbol">$</span>
                 <span class="price--number">99</span>
               </div>
-              <p>*Ahorras $129 comparado al plan mensual.</p>
-              <div class="plan-select">
-                <p>Escoger este</p>
-                <div class="arrow-select"></div>
+              <div class="plan-description">
+                <p>*Ahorras $129 comparado al plan mensual.</p>
               </div>
+              <a href="" class="plan--button">Escoger este <span></span></a>
             </div>
           </div>
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer--links">
+        <a href="">Linkedin</a><a href="">Crunchbase</a><a href="">Hackernews</a>
+      </div>
+      <div class="footer-icon"></div>
+    </footer>
   </body>
 </html>
